--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@
 h1,h2,h3,h4,h5,h6,span,p{
   color: var(--dark-color)
 }
+a{
+  all: unset;
+}
+a:hover{
+  all: unset;
+}
